refactor: replace mybatis to JPA